modified Model by removing some print